изменение "наши работы"

--- a/sass/main.sass
+++ b/sass/main.sass
@@ -28,9 +28,6 @@ body textarea:required:valid
 .slide
 	img 
 		margin: 0 15px 0
-
-.client
-	margin-left: 30px
 	
 .tel, .mail
 	display: inline-block
@@ -48,7 +45,8 @@ body textarea:required:valid
 		text-decoration: none
 		border-bottom: 1px dashed #fff
 
-.contact
+.footer
+	min-height: 120px
 	
 	
 
