добавлены иконки исправлено png, gif на svg

--- a/sass/main.sass
+++ b/sass/main.sass
@@ -25,10 +25,18 @@ body textarea:required:valid
 	color: #666
 
 //Custom Styles Here
+.icon-serv
+  display: inline-block
+  width: 50px
+  height: 50px
+  
 .slide
 	img 
 		margin: 0 15px 0
-	
+
+.s-client
+	min-height: 300px
+
 .tel, .mail
 	display: inline-block
 	text-align: center
@@ -46,7 +54,28 @@ body textarea:required:valid
 		border-bottom: 1px dashed #fff
 
 .footer
-	min-height: 120px
+	min-height: 30px
+	margin: 45px 0px
+
+.soc-seti
+	margin-left: 10px
+
+.right
+	text-align: right
+	font-size: 0px
+
+
+.icon 
+   display: inline-block
+   width: 30px
+   height: 30px
+   stroke-width: 0
+   stroke: currentColor
+   fill: #3fa9ba
+   margin-left: 10px
+
+	
+
 	
 	
 
