изменена иконка mobile на svg выравнен центральный блок по середине

--- a/sass/header.sass
+++ b/sass/header.sass
@@ -57,6 +57,8 @@ nav
 
 .s-wide
 	height: 380px
+	margin-bottom: 70px
+
 .s-blue
 	background: url("img/banner.jpg") repeat 0 0
 	color: #fff
@@ -83,21 +85,14 @@ i
 	margin-bottom: 30px
 
 .s-serv
-	padding-top: 70px
-	width 270px
 	font-family: "Ubuntulight", sans-serif
 	span
 		display: block
 		margin: 30px 0px
 		font-size: em(18px)
 		line-height: em(28px)
-
-	.serv-icon-1
-		background: url("img/icon1.gif") no-repeat 5px 50%
 	.serv-icon-2
 		background: url("img/icon2.gif") no-repeat 5px 50%
-	.serv-icon-3
-		background: url("img/icon3.gif") no-repeat 5px 50%
 	h3
 		font-weight: 300
 	 	font-size: em(20px)
@@ -106,6 +101,10 @@ i
    	color: $green
 h2
 	font-size: em(30px)
+
+.serv-item-2
+	width: 250px
+	display: inline-block
 
 
 	
