--- a/sass/main.sass
+++ b/sass/main.sass
@@ -29,7 +29,7 @@ body textarea:required:valid
   display: inline-block
   width: 50px
   height: 50px
-  
+
 .slide
 	img 
 		margin: 0 15px 0
@@ -62,8 +62,12 @@ body textarea:required:valid
 
 .right
 	text-align: right
-	font-size: 0px
 
+.center
+	text-align: center
+	
+.left
+	text-align: left
 
 .icon 
    display: inline-block
