исправленны ошибки добавлена иконка телефон

--- a/sass/main.sass
+++ b/sass/main.sass
@@ -60,6 +60,9 @@ body textarea:required:valid
 .soc-seti
 	margin-left: 10px
 
+.zero
+	font-size: 0px
+
 .right
 	text-align: right
 
@@ -77,6 +80,10 @@ body textarea:required:valid
    stroke: currentColor
    fill: #3fa9ba
    margin-left: 10px
+
+.icon-phone, .icon-mail
+	fill: #fff
+
 
 	
 
