--- a/sass/main.sass
+++ b/sass/main.sass
@@ -26,9 +26,9 @@ body textarea:required:valid
 
 //Custom Styles Here
 .icon-serv
-  display: inline-block
-  width: 50px
-  height: 50px
+	display: inline-block
+	width: 50px
+	height: 50px
 
 .slide
 	img 
@@ -39,24 +39,20 @@ body textarea:required:valid
 
 .tel, .mail
 	display: inline-block
-
-.tel, .mail
-		div:first-of-type
-			font-size: em(24px)
-			line-height: 50px
-			font-family: 'UbuntuBold', sans-serif
-
-.tel, .mail
 	a
 		color: #fff
 		text-decoration: none
 		border-bottom: 1px dashed #fff
+	div:first-of-type
+			font-size: em(29px)
+			line-height: 50px
+			font-family: 'UbuntuBold', sans-serif
 
 .footer
 	min-height: 30px
 	margin: 45px 0px
 
-.soc-seti
+.icon-soc-seti
 	margin-left: 10px
 
 .zero
@@ -72,16 +68,18 @@ body textarea:required:valid
 	text-align: left
 
 .icon 
-   display: inline-block
-   width: 30px
-   height: 30px
-   stroke-width: 0
-   stroke: currentColor
-   fill: #3fa9ba
-   margin-left: 10px
+	display: inline-block
+	width: 30px
+	height: 30px
+	stroke-width: 0
+	stroke: currentColor
+	fill: #3fa9ba
 
 .icon-phone, .icon-mail
 	fill: #fff
+	width: 35px
+	height: 35px
+	margin-right: 20px
 
 
 	
