добавлены img phole & mail

--- a/sass/main.sass
+++ b/sass/main.sass
@@ -44,9 +44,12 @@ body textarea:required:valid
 		text-decoration: none
 		border-bottom: 1px dashed #fff
 	div:first-of-type
-			font-size: em(29px)
-			line-height: 50px
+			font-size: em(25px)
 			font-family: 'UbuntuBold', sans-serif
+	div:last-of-type
+			padding-left: 55px
+
+
 
 .footer
 	min-height: 30px
@@ -75,15 +78,11 @@ body textarea:required:valid
 	stroke: currentColor
 	fill: #3fa9ba
 
-.icon-phone, .icon-mail
+.icon-contact
 	fill: #fff
 	width: 35px
 	height: 35px
 	margin-right: 20px
-
-
-	
-
 	
 	
 
