--- a/sass/header.sass
+++ b/sass/header.sass
@@ -88,13 +88,16 @@ i
 	span
 		display: block
 		margin: 30px 0px
-		font-size: em(18px)
+		font-size: em(16px)
 		line-height: em(28px)
-	.serv-icon-2
-		background: url("img/icon2.gif") no-repeat 5px 50%
+
+.work-item
+	width: 370px
+	padding-left: 20px
+
+.s-serv-item
 	h3
-		font-weight: 300
-	 	font-size: em(20px)
+		font-size: em(22px)
   strong
    	border-bottom: 1px solid $green
    	color: $green
@@ -104,6 +107,14 @@ h2
 .serv-item-2
 	width: 250px
 	display: inline-block
+
+.slideron:active 
+		border: none
+
+.slider
+	div:active, div:focus, div:hover 
+		outline: none
+
 
 
 	
