--- a/sass/main.sass
+++ b/sass/main.sass
@@ -84,6 +84,15 @@ body textarea:required:valid
 	height: 35px
 	margin-right: 20px
 	
+.footer-nav
+	span
+		padding-left: 20px
+	a	
+		color: $green
+		font-family: "Ubuntulight", sans-serif
+	a:hover, a:focus
+		text-decoration: none
+		border-bottom: 1px solid $green
 	
 
 
